@@ -12,22 +12,22 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import java.text.SimpleDateFormat;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class UserService {
 
     private final UserRepository userRepository;
-
-    private static final SimpleDateFormat simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd");
 
     public UserService(UserRepository userRepository) {
         this.userRepository = userRepository;
     }
 
+    @Transactional
     public UserDto createUser(CreateUserRequest request) {
         User user = new User();
         user.setId(UUID.randomUUID());
@@ -40,6 +40,7 @@ public class UserService {
         return Mapper.convert(userRepository.save(user));
     }
 
+    @Transactional(readOnly = true)
     public UserDto getUser(String id) {
         if(id.isBlank()){
             throw InvalidArgumentException.from("id ", " id should not be blank!");
@@ -54,6 +55,7 @@ public class UserService {
         }
     }
 
+    @Transactional
     public UserDto deleteUser(String id) {
         if(id.isBlank()){
             throw InvalidArgumentException.from("id ", " id should not be blank!");
@@ -71,12 +73,13 @@ public class UserService {
         }
     }
 
+    @Transactional(readOnly = true)
     public GetUsersResponse getUsers(GetUsersRequest request) {
         int pageSize = Math.min(Math.max(request.getPageSize(), 10), 100);
         Pageable pageable = PageRequest.of(request.getStartPage(), pageSize);
         Page<User> users = userRepository.findAll(pageable);
         GetUsersResponse getUsersResponse = new GetUsersResponse();
-        getUsersResponse.setUser(users.stream().map(Mapper::convert).collect(Collectors.toList()));
+        getUsersResponse.setUser(users.stream().map(Mapper::convert).toList());
         getUsersResponse.setHasNext(users.hasNext());
         getUsersResponse.setHasPrevious(users.hasPrevious());
         getUsersResponse.setNextPage(users.getPageable().next().getPageNumber());
@@ -85,39 +88,38 @@ public class UserService {
         return getUsersResponse;
     }
 
+    @Transactional
     public UserDto updateUser(UserDto request) {
         if(request.getId().isBlank() || request.getId() == null) {
             throw InvalidArgumentException.from("id ", " id should not be null or empty");
         }
-        else {
-            Optional<User> optionalUser = userRepository.findById(UUID.fromString(request.getId()));
-            if(optionalUser.isPresent()){
-                User user = optionalUser.get();
-                if(request.getName() != null){
-                    user.setName(request.getName());
-                }
-                if(request.getEmail() != null){
-                    user.setEmail(request.getEmail());
-                }
-                if(request.getPhoneNumber() != null){
-                    user.setPhoneNumber(request.getPhoneNumber());
-                }
-                if(request.getGender() != null){
-                    user.setGender(request.getGender());
-                }
-                if(request.getAddress() != null){
-                    user.setAddress(null);
-                    user.setAddress(Mapper.convert(request.getAddress(), user));
-                }
-                if(request.getCreditCards() != null){
-                    user.getCreditCards().clear();
-                    user.setCreditCards(Mapper.convert(request.getCreditCards(), user));
-                }
-
-                return Mapper.convert(user);
+        Optional<User> optionalUser = userRepository.findById(UUID.fromString(request.getId()));
+        if(optionalUser.isPresent()) {
+            User user = optionalUser.get();
+            if (request.getName() != null) {
+                user.setName(request.getName());
             }
-            return null;
+            if (request.getEmail() != null) {
+                user.setEmail(request.getEmail());
+            }
+            if (request.getPhoneNumber() != null) {
+                user.setPhoneNumber(request.getPhoneNumber());
+            }
+            if (request.getGender() != null) {
+                user.setGender(request.getGender());
+            }
+            if (request.getAddress() != null) {
+                user.setAddress(null);
+                user.setAddress(Mapper.convert(request.getAddress(), user));
+            }
+            if (request.getCreditCards() != null) {
+                user.getCreditCards().clear();
+                user.setCreditCards(Mapper.convert(request.getCreditCards(), user));
+            }
+
+            return Mapper.convert(user);
         }
+        return null;
     }
 
 }
